[CRD iOS] Make the app respect to safe area

This CL makes the app respect to the safe area of the phone, i.e.
dealing with iPhone X's unibrow...

This CL:
* Makes host list and setup instructions adjust position for the safe
area.
* Makes host view adjust bounds for safe area.

Screenshots:
https://drive.google.com/a/chromium.org/file/d/0BytzIZKeM8nBRzNvVzNadUxCbEk/view?usp=sharing
https://drive.google.com/a/chromium.org/file/d/0BytzIZKeM8nBLVNJS2VCUS1VVXM/view?usp=sharing

Bug: 767147
Change-Id: Ifbe689c5e8fa670b4b44788390c2d1f654807133
Reviewed-on: https://chromium-review.googlesource.com/676270
Reviewed-by: Scott Nichols <nicholss@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503868}