remoting/ios/app/host_collection_view_cell.mm
@@ -13,6 +13,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import "ios/third_party/material_components_ios/src/components/Typography/src/MaterialTypography.h"
 #import "remoting/ios/app/remoting_theme.h"
+#import "remoting/ios/app/view_utils.h"
 #import "remoting/ios/domain/host_info.h"
 
 #include "base/strings/sys_string_conversions.h"
@@ -78,6 +79,9 @@ static const CGFloat kHostCardIconSize = 45.f;
   _statusLabel.textColor = [UIColor colorWithWhite:0 alpha:0.60f];
   [_labelView addSubview:_statusLabel];
 
+  UILayoutGuide* safeAreaLayoutGuide =
+      remoting::SafeAreaLayoutGuideForView(self);
+
   // Constraints
   NSArray* constraints = @[
     // +------------+---------------+
@@ -90,10 +94,10 @@ static const CGFloat kHostCardIconSize = 45.f;
     //       |              |
     //  Image View     Label View
     [[_imageView leadingAnchor]
-        constraintEqualToAnchor:[self.contentView leadingAnchor]
+        constraintEqualToAnchor:safeAreaLayoutGuide.leadingAnchor
                        constant:kHostCardIconInset],
     [[_imageView centerYAnchor]
-        constraintEqualToAnchor:[self.contentView centerYAnchor]],
+        constraintEqualToAnchor:safeAreaLayoutGuide.centerYAnchor],
     [[_imageView widthAnchor] constraintEqualToConstant:kHostCardIconSize],
     [[_imageView heightAnchor] constraintEqualToConstant:kHostCardIconSize],
 
@@ -101,12 +105,12 @@ static const CGFloat kHostCardIconSize = 45.f;
         constraintEqualToAnchor:[_imageView trailingAnchor]
                        constant:kHostCardIconInset],
     [[_labelView trailingAnchor]
-        constraintEqualToAnchor:[self.contentView trailingAnchor]
+        constraintEqualToAnchor:safeAreaLayoutGuide.trailingAnchor
                        constant:-kHostCardPadding / 2.f],
     [[_labelView topAnchor]
-        constraintEqualToAnchor:[self.contentView topAnchor]],
+        constraintEqualToAnchor:safeAreaLayoutGuide.topAnchor],
     [[_labelView bottomAnchor]
-        constraintEqualToAnchor:[self.contentView bottomAnchor]],
+        constraintEqualToAnchor:safeAreaLayoutGuide.bottomAnchor],
 
     // Put titleLable and statusLable symmetrically around centerY.
     [[_titleLabel leadingAnchor]
