remoting/ios/app/host_setup_view_cell.mm
@@ -11,6 +11,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #import "ios/third_party/material_components_ios/src/components/Typography/src/MaterialTypography.h"
 #import "remoting/ios/app/remoting_theme.h"
+#import "remoting/ios/app/view_utils.h"
 
 static const CGFloat kNumberIconPadding = 16.f;
 static const CGFloat kNumberIconSize = 45.f;
@@ -57,12 +58,15 @@ static const CGFloat kCellPadding = 22.f;
   [self.contentView addSubview:_contentLabel];
   [_numberContainerView addSubview:_numberLabel];
 
+  UILayoutGuide* safeAreaLayoutGuide =
+      remoting::SafeAreaLayoutGuideForView(self.contentView);
+
   NSArray* constraints = @[
     [_numberContainerView.leadingAnchor
-        constraintEqualToAnchor:self.contentView.leadingAnchor
+        constraintEqualToAnchor:safeAreaLayoutGuide.leadingAnchor
                        constant:kCellPadding],
     [_numberContainerView.centerYAnchor
-        constraintEqualToAnchor:self.contentView.centerYAnchor],
+        constraintEqualToAnchor:safeAreaLayoutGuide.centerYAnchor],
     [_numberContainerView.widthAnchor
         constraintEqualToConstant:kNumberIconSize],
     [_numberContainerView.heightAnchor
@@ -77,10 +81,10 @@ static const CGFloat kCellPadding = 22.f;
         constraintEqualToAnchor:_numberContainerView.trailingAnchor
                        constant:kNumberIconPadding],
     [_contentLabel.trailingAnchor
-        constraintEqualToAnchor:self.contentView.trailingAnchor
+        constraintEqualToAnchor:safeAreaLayoutGuide.trailingAnchor
                        constant:-kCellPadding],
     [_contentLabel.centerYAnchor
-        constraintEqualToAnchor:self.contentView.centerYAnchor],
+        constraintEqualToAnchor:safeAreaLayoutGuide.centerYAnchor],
   ];
   [NSLayoutConstraint activateConstraints:constraints];
 }
